tests/paczka1/fuzzy1/91751213.err
Error in line 5: 1FgoP S334 43,6
Error in line 8: wdUA A871 242,6
Error in line 7: hLM A691 59,4
Error in line 20: hLM S420 20,8
Error in line 22: 1FgoP S420 16,2
Error in line 24: 1FgoP A691 56,6
Error in line 27: wdUA S420 31,3
Error in line 35: YDJ9ID S420 54,7
Error in line 37: YDJ9ID A691 66,9
